force-app/main/default/objects/JDE_Prop__c/JDE_Prop__c.object-meta.xml
<CustomObject>
    <label>JDE Prop</label>
    <nameField>
        <label>Proposal Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>JDE Props</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>