force-app/main/default/objects/JDE_Prop__c/fields/Adjustment_Schedule_Desc__c.field-meta.xml
<CustomField>
    <fullName>Adjustment_Schedule_Desc__c</fullName>
    <label>Pricing Schedule Desc</label>
    <length>30</length>
    <type>Text</type>
</CustomField>