force-app/main/default/objects/JDE_Prop__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <label>Contract</label>
    <length>8</length>
    <type>Text</type>
</CustomField>