force-app/main/default/objects/JDE_Prop__c/fields/Freight_Description__c.field-meta.xml
<CustomField>
    <fullName>Freight_Description__c</fullName>
    <label>Freight Description</label>
    <length>30</length>
    <type>Text</type>
</CustomField>