force-app/main/default/objects/JDE_Prop__c/fields/Hold_Code_Desc_01__c.field-meta.xml
<CustomField>
    <fullName>Hold_Code_Desc_01__c</fullName>
    <label>Hold Code Desc 01</label>
    <length>30</length>
    <type>Text</type>
</CustomField>