force-app/main/default/objects/JDE_Prop__c/fields/Main_SRP_Code_3__c.field-meta.xml
<CustomField>
    <fullName>Main_SRP_Code_3__c</fullName>
    <label>Main SRP Code 3</label>
    <length>3</length>
    <type>Text</type>
</CustomField>