force-app/main/default/objects/JDE_Prop__c/fields/Order_Company__c.field-meta.xml
<CustomField>
    <fullName>Order_Company__c</fullName>
    <label>Proposal Company</label>
    <length>5</length>
    <type>Text</type>
</CustomField>