force-app/main/default/objects/JDE_Prop__c/fields/Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Order_Number__c</fullName>
    <label>Proposal Number (Do Not Use)</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>