force-app/main/default/objects/JDE_Prop__c/fields/Order_Type__c.field-meta.xml
<CustomField>
    <fullName>Order_Type__c</fullName>
    <label>Proposal Type</label>
    <length>2</length>
    <type>Text</type>
</CustomField>