force-app/main/default/objects/JDE_Prop__c/fields/Ship_To__c.field-meta.xml
<CustomField>
    <fullName>Ship_To__c</fullName>
    <label>Ship To</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>JDE Props (Ship To)</relationshipLabel>
    <relationshipName>Ship_To_Proposals</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>