force-app/main/default/objects/JDE_Prop__c/fields/Sold_To__c.field-meta.xml
<CustomField>
    <fullName>Sold_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sold To</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Sold_To_Proposals</relationshipName>
    <type>Lookup</type>
</CustomField>