force-app/main/default/objects/JDE_Prop__c/fields/sys_TotalDiscount__c.field-meta.xml
<CustomField>
    <fullName>sys_TotalDiscount__c</fullName>
    <formula>IF( sys_TotalList__c = null || sys_TotalList__c &lt;= 0,0,1-( sys_TotalNet__c / sys_TotalList__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Discount</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>