force-app/main/default/objects/JDE_Prop__c/fields/sys_TotalList__c.field-meta.xml
<CustomField>
    <fullName>sys_TotalList__c</fullName>
    <label>Total List Price</label>
    <summarizedField>JDE_Prop_Ln_Item__c.List_Price__c</summarizedField>
    <summaryForeignKey>JDE_Prop_Ln_Item__c.Proposal__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>