force-app/main/default/objects/JDE_Prop__c/fields/sys_TotalNet__c.field-meta.xml
<CustomField>
    <fullName>sys_TotalNet__c</fullName>
    <label>sys_TotalNet</label>
    <summarizedField>JDE_Prop_Ln_Item__c.Price__c</summarizedField>
    <summaryForeignKey>JDE_Prop_Ln_Item__c.Proposal__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>