force-app/main/default/objects/JDE_Prop__c/listViews/ALL1.listView-meta.xml
<ListView>
    <fullName>ALL1</fullName>
    <columns>NAME</columns>
    <columns>Proposal_Date__c</columns>
    <columns>Proposal_Expiration_Date__c</columns>
    <columns>Ship_To__c</columns>
    <columns>Sold_To__c</columns>
    <columns>Main_SRP_Code_2_Description__c</columns>
    <filterScope>Everything</filterScope>
    <label>ALL</label>
    <language>en_US</language>
</ListView>