force-app/main/default/objects/JDE_Prop__c/listViews/JDE_Proposal_Last_30_Days_Capital.listView-meta.xml
<ListView>
    <fullName>JDE_Proposal_Last_30_Days_Capital</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>PO_Number__c</columns>
    <columns>Proposal_Date__c</columns>
    <columns>Ship_To__c</columns>
    <columns>Sold_To__c</columns>
    <columns>sys_TotalDiscount__c</columns>
    <columns>sys_TotalList__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterThan</operation>
        <value>LAST_MONTH</value>
    </filters>
    <label>JDE Proposal Last 30 Days Capital</label>
</ListView>