force-app/main/default/objects/JDE_Prop__c/listViews/METANEB_PROPOSALS.listView-meta.xml
<ListView>
    <fullName>METANEB_PROPOSALS</fullName>
    <columns>NAME</columns>
    <columns>Proposal_Date__c</columns>
    <columns>Proposal_Expiration_Date__c</columns>
    <columns>Ship_To__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>sys_TotalNet__c</columns>
    <columns>SYS_Respiratory_Level_I__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Main_SRP_Code_2__c</field>
        <operation>equals</operation>
        <value>760,918</value>
    </filters>
    <label>METANEB PROPOSALS</label>
    <language>en_US</language>
</ListView>