force-app/main/default/objects/JDE_Prop__c/listViews/Respiratory_Proposals.listView-meta.xml
<ListView>
    <fullName>Respiratory_Proposals</fullName>
    <columns>NAME</columns>
    <columns>Proposal_Date__c</columns>
    <columns>Ship_To__c</columns>
    <columns>Sold_To__c</columns>
    <columns>Order_Type__c</columns>
    <columns>Main_SRP_Code_2_Description__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Main_SRP_Code_2__c</field>
        <operation>equals</operation>
        <value>690,725</value>
    </filters>
    <label>Respiratory Proposals</label>
    <language>en_US</language>
    <sharedTo></sharedTo>
</ListView>